clusters/cluster0/kubernetes/apps/renovate/renovate/app/policies/renovate-baseline-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: renovate-baseline-policy
  namespace: renovate
spec:
  endpointSelector: {}
  egress:
    # 1. DNS
    - toEndpoints:
        - matchLabels:
            "io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # 2. K8s API
    - toEntities:
        - kube-apiserver
    # 3. Database (PostgreSQL in cnpg-system)
    - toEndpoints:
        - matchLabels:
            "io.cnpg.namespace": cnpg-system
            app.kubernetes.io/name: cnpg-renovate-rw
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
