clusters/cluster0/kubernetes/apps/renovate/renovate/app/policies/renovate-github-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: renovate-github-policy
  namespace: renovate
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: renovate
  egress:
    # 1. HTTPS to GitHub
    - toFQDNs:
        - github.com
        - api.github.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
